# fastapi-authorization

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/abac/: main.py
examples/rbac/app/: main.py
examples/rbac/tests/: test_main.py
fastapi_authorization/: __init__.py  abac.py  rbac.py  testing.py  utils.py
tests/: main.py  main_rbac.py  test_rbac.py  test_testing.py  test_utils.py
