[metadata]
name = fastapi-authorization
version = 0.1.0
description = Opinionated authorization package for FastAPI! :tada:
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kludex/fastapi-authorization
author = Marcelo Trylesinski
author_email = marcelotryle@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    fastapi>=0.65.2
python_requires = >=3.8.0

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[coverage:run]
branch = True
source = fastapi_authorization

[coverage:report]
show_missing = True
skip_covered = True